--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Egor Sedov"
   avatar           : "profile.jpg"
-  bio              : "PhD student \n Researcher in nonlinear optics and optical communication \n Aston Institute of Photonic Technologies"
+  bio              : "PhD student | Researcher"
   location         : "Birmingham, UK"
   employer         :
   pubmed           :
