--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Egor Sedov / Personal Page"
 title_separator          : "-"
 name                     : &name "Egor Sedov"
-description              : &description "PhD student | researcher | Aston Institute of Photonic Technologies"
+description              : &description "PhD student | Researcher | Machine Learning"
 url                      : https://esf0.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "esf0/esf0.github.io"
