--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   location         : "Birmingham, UK"
   employer         :
   pubmed           :
-  googlescholar    : "http://yourfullgooglescholarurl.com"
+  googlescholar    : "https://scholar.google.co.uk/citations?user=jaX_nyMAAAAJ&hl=en"
   email            :
   researchgate     : "https://www.researchgate.net/profile/Egor-Sedov-4"
   uri              :
