Personal info update

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "en-UK"
 title                    : "Egor Sedov / Personal Page"
 title_separator          : "-"
 name                     : &name "Egor Sedov"
-description              : &description "PhD student | Researcher | Machine Learning"
+description              : &description "PhD | Researcher | Machine Learning | AI engineering"
 url                      : https://esf0.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "esf0/esf0.github.io"
