--- a/_config.yml
+++ b/_config.yml
@@ -159,7 +159,7 @@ analytics:
 author:
   name             : "Egor Sedov"
   avatar           : "profile.jpg"
-  bio              : "PhD student | Researcher | Machine Learning"
+  bio              : "PhD | Researcher | Machine Learning | AI engineering"
   location         : "Senningerberg, Luxembourg"
   employer         :
   pubmed           :
