add enpc thesis

--- a/_config.yml
+++ b/_config.yml
@@ -79,6 +79,8 @@ author:
 
 # Publication Category - The following the list of publication categories and their headings
 publication_category:
+  thesis:
+    title: 'Theses'
   books:
     title: 'Books'
   manuscripts:
